--- a/src/Ui/Website/Shared/Messages/MessagesUploadDialog.razor
+++ b/src/Ui/Website/Shared/Messages/MessagesUploadDialog.razor
@@ -47,7 +47,7 @@
 
 @code {
   [CascadingParameter]
-  IDialogReference MudDialog { get; set; }
+  IMudDialogInstance MudDialog { get; set; }
 
   IList<string> _fileContents = new List<string>();
 
