--- a/src/Ui/Website/Shared/Messages/PurgeMessagesDialog.razor
+++ b/src/Ui/Website/Shared/Messages/PurgeMessagesDialog.razor
@@ -34,7 +34,7 @@
 
 @code {
     [CascadingParameter]
-    IDialogReference MudDialog { get; set; }
+    IMudDialogInstance MudDialog{ get; set; }
 
     private SubQueue _subQueue;
 
