--- a/src/Ui/Website/Shared/Queue/CloneDialog.razor
+++ b/src/Ui/Website/Shared/Queue/CloneDialog.razor
@@ -17,7 +17,7 @@
 
 @code {
     [CascadingParameter]
-    IDialogReference MudDialog { get; set; }
+    IMudDialogInstance MudDialog{ get; set; }
 
     [Parameter]
     public string SourceDialogName { get; set; }
